--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Web Personal</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
@@ -13,40 +14,47 @@
     </header>
 
     <nav>
-        <a href="#sobre-mi">Sobre mí</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#cv">CV</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#" data-section="inicio">Inicio</a>
+        <a href="#" data-section="sobre-mi">Sobre mí</a>
+        <a href="#" data-section="proyectos">Proyectos</a>
+        <a href="#" data-section="cv">CV</a>
+        <a href="#" data-section="contacto">Contacto</a>
     </nav>
 
-    <section id="sobre-mi">
-        <h2>Sobre mí</h2>
-        <p>Aquí puedes escribir sobre tu experiencia y habilidades.</p>
-    </section>
+    <main>
+        <section id="inicio" class="section active">
+            <h2>Bienvenido</h2>
+            <p>Gracias por visitar mi web personal.</p>
+        </section>
 
-    <section id="proyectos">
-        <h2>Proyectos</h2>
-        <div class="galeria">
-            <!-- Aquí puedes agregar tus proyectos -->
-            <div class="proyecto">
-                <img src="img/proyecto1.jpg" alt="Proyecto 1">
-                <h3>Nombre del Proyecto</h3>
-                <p>Descripción breve.</p>
-                <a href="#">Ver más</a>
+        <section id="sobre-mi" class="section">
+            <h2>Sobre mí</h2>
+            <p>Aquí puedes escribir sobre tu experiencia y habilidades.</p>
+        </section>
+
+        <section id="proyectos" class="section">
+            <h2>Proyectos</h2>
+            <div class="galeria">
+                <div class="proyecto">
+                    <img src="img/proyecto1.jpg" alt="Proyecto 1">
+                    <h3>Nombre del Proyecto</h3>
+                    <p>Descripción breve.</p>
+                    <a href="#">Ver más</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="cv">
-        <h2>Currículum</h2>
-        <p>Puedes subir tu CV en PDF y enlazarlo aquí.</p>
-    </section>
+        <section id="cv" class="section">
+            <h2>Currículum</h2>
+            <p>Puedes subir tu CV en PDF y enlazarlo aquí.</p>
+        </section>
 
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p>Email: tu@email.com</p>
-        <p>GitHub: <a href="https://github.com/tuusuario">tuusuario</a></p>
-    </section>
+        <section id="contacto" class="section">
+            <h2>Contacto</h2>
+            <p>Email: tu@email.com</p>
+            <p>GitHub: <a href="https://github.com/tuusuario">tuusuario</a></p>
+        </section>
+    </main>
 
     <footer>
         <p>© [Tu Nombre] - 2025</p>
